# authserver

./: Cargo.toml
src/: main.rs
src/auth_clients/: mod.rs
src/auth_clients/google_auth/: client.rs
src/authentication/: controller.rs  mod.rs  routes.rs
src/config/: mod.rs
