[package]
name = "authserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
color-eyre = "0.6.2"
config = "0.13.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
eyre = "0.6.8"
serde = { version = "1.0.142", features = ["derive"] }
tracing = "0.1.36"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
