[package]
name = "authserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = { version = "4.2.1", features= ["openssl"] }
oauth2 = "4.2.3"
openssl = { version = "0.10.41", features = ["v110"] }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
